2008-07-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/confirmation.c (gtkpod_confirmation): initialize
          <scrolled> variable. Thanks to Andrea.

2008-07-19 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_playlists.c (pm_add_child): when adding
          playlists to the end, don't add behind the Photo item.

2008-07-18 P.G. Richardson <phantom_sf at users.sourceforge.net>

	* src/file.c (get_track_info_from_file): 
	Relating to previous change. Rather than comment out, have reversed
	logic as per Michael Tiffany's patch (15/07/2008)

2008-07-18 P.G. Richardson <phantom_sf at users.sourceforge.net>

	* src/file.c (get_track_info_from_file): 
	Commented out test itdb_track_has_thumbnails test on line 1418
	as this stops coverart being added to new tracks as they are being
	imported from directory.

2008-07-06 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_playlists.c (pm_get_iter_for_playlist): remove
          assertion (pl!=NULL) that is no longer valid with the
          introduction of the "Photo" entity. Should take care of the
          segfaults when removing a playlist listed after the Photo
          entity.

2008-07-14  Todd Zullinger  <tmzullinger at users.sourceforge.net>

	* scripts/sync-evolution.sh
	  scripts/sync-ldif.sh: Use /bin/bash as the interpreter, as
	  these scripts use bash-specific syntax

	* scripts/sync-thunderbird-nano.sh: Remove a few bashisms

	  Thanks to Frank Lichtenheld (fixes Debian bug #489605)

2008-07-06 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/syncdir.c: hash filenames of tracks to reduce overhead
          when syncing parts of large repositories. Thanks to Clarke
          Brunsdon for the initial patch.

	* src/file.c: also update mtime of updated tracks.


2008-07-05 Jorg Schuler <jcsjcs at users.sourceforge.net>

	* src/display_coverart.c:

	  Normalized indentation (original editor was mis-configured).

